fix spacing

--- a/assets/scss/custom/custom.scss
+++ b/assets/scss/custom/custom.scss
@@ -642,6 +642,6 @@ h4 {
 }
 
 // training description
-#trainings .card h2, #trainings .card h3 {
+#training .card h2, #training .card h3 {
     margin-top: 1em;
 }
